syntax = 'proto3';

package checkout;

option go_package = "route256/checkout/pkg/checkout_v1";


import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

service Checkout {

  rpc AddToCart(AddToCartRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/addToCart"
      body: "*"
    };
  }

  rpc DeleteFromCart(DeleteFromCartRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/deleteFromCart"
      body: "*"
    };
  }

  rpc ListCart(ListCartRequest) returns (ListCartResponse) {
    option (google.api.http) = {
      post: "/v1/listCart"
      body: "*"
    };
  }

  rpc Purchase(PurchaseRequest) returns (PurchaseResponse) {
    option (google.api.http) = {
      post: "/v1/purchase"
      body: "*"
    };
  }
}

message AddToCartRequest {
  int64 user = 1 [(validate.rules).int64.gt = 0];
  uint32 sku = 2 [(validate.rules).uint32.gt = 0];
  uint32 count = 3 [(validate.rules).uint32 = {gte:0, lt: 65536}];
}

message DeleteFromCartRequest {
  int64 user = 1 [(validate.rules).int64.gt = 0];
  uint32 sku = 2 [(validate.rules).uint32.gt = 0];
  uint32 count = 3 [(validate.rules).uint32 = {gte:0, lt: 65536}];
}

message ListCartRequest {
  int64 user = 1 [(validate.rules).int64.gt = 0];
}

message ListCartItem {
  uint32 sku = 1 [(validate.rules).uint32.gt = 0];
  uint32 count = 2 [(validate.rules).uint32 = {gte:0, lt: 65536}];
  string name = 3;
  uint32 price = 4 [(validate.rules).uint32.gt = 0];
}

message ListCartResponse {
  repeated ListCartItem items = 1 [(validate.rules).repeated = {min_items: 1, max_items: 100}];
  uint32 total_price = 2 [(validate.rules).uint32.gt = 0];
}

message PurchaseRequest {
  int64 user = 1 [(validate.rules).int64.gt = 0];
}

message PurchaseResponse {
  int64 order_id = 1 [(validate.rules).int64.gt = 0];
}